# particle-sfm

./: .gitignore  .gitmodules  README.md  load_frames.py  particlesfm_env.yaml  run_particlesfm.py  traj_stats.ipynb  visualize.py
evaluation_evo/: eval_scannet.py  eval_sintel.py  sintel_io.py
misc/doc/: ceres.md  colmap.md  theia.md
motion_seg/: __init__.py  eval_traj_iou.py  load_cut_seq.py  main_motion_segmentation.py  train_seq.py
motion_seg/configs/: example_test.yaml  example_train.yaml
motion_seg/core/dataset/: data_utils.py  flythings3d_seq.py
motion_seg/core/network/: loss_func.py  oanet.py  traj_oa_depth.py
motion_seg/core/utils/: utils.py
motion_seg/log/pretrain/: checkpoint.pth.2
point_trajectory/: __init__.py  main_connect_point_trajectories.py  track.py  track_optimize.py  trajectory.py  utils.py
point_trajectory/optimize/: CMakeLists.txt
point_trajectory/optimize/cmake/: FindCeres.cmake
point_trajectory/optimize/src/: CMakeLists.txt  bindings.cc  linear_interpolation.h  path_consistency_cost.h  trajectory_base.cpp  trajectory_base.h  trajectory_optimize.cpp  trajectory_optimize.h
scripts/: build_all.sh  download_all_models.sh  download_examples.sh  download_model_pretrained.sh  download_models_thirdparty.sh  prepare_flyingthings3d.py  prepare_scannet.py  prepare_sintel.py
sfm/: __init__.py  convert.py  import_feature_matches.py  main_sfm.py  matches_from_flow.py
sfm/colmap_utils/: database.py
sfm/gmapper/: CMakeLists.txt  README.md
sfm/gmapper/cmake/: CMakeConfig.cmake.in  CMakeConfigVersion.cmake.in  CMakeHelper.cmake  FindOpenMP.cmake
sfm/gmapper/src/: CMakeLists.txt
sfm/gmapper/src/base/: CMakeLists.txt  correspondence_graph.cc  correspondence_graph.h  database_cache.cc  database_cache.h  reconstruction.cc  reconstruction.h  reconstruction_manager.cc
sfm/gmapper/src/controllers/: CMakeLists.txt  global_mapper.cc  global_mapper.h
sfm/gmapper/src/estimators/: CMakeLists.txt  two_view_geometry.cc  two_view_geometry.h
sfm/gmapper/src/exe/: CMakeLists.txt  gcolmap.cc
sfm/gmapper/src/global/: CMakeLists.txt  filter_util.cc  filter_util.h  image_triplet.h  known_rotation_util.cc  known_rotation_util.h  least_unsquared_deviation_position_estimator.cc  least_unsquared_deviation_position_estimator.h  linear_position_estimator.cc  linear_position_estimator.h  nonlinear_position_estimator.cc  nonlinear_position_estimator.h  orientation_util.cc  orientation_util.h  position_estimator.h  robust_rotation_estimator.cc  robust_rotation_estimator.h  rotation_estimator.h  triplet_util.cc  triplet_util.h
sfm/gmapper/src/optim/: CMakeLists.txt  bundle_adjustment.cc  bundle_adjustment.h
sfm/gmapper/src/sfm/: CMakeLists.txt  global_mapper.cc  global_mapper.h  incremental_triangulator.cc  incremental_triangulator.h
sfm/gmapper/src/util/: CMakeLists.txt  hash.h  option_manager.cc  option_manager.h
